# tool-eval

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/tool_eval/: __init__.py  agent.py  cli.py  client.py
src/tool_eval/harness/: __init__.py  metrics.py  runner.py  scoring.py
src/tool_eval/tools/: __init__.py  exploration.py  models.py  registry.py  tier1.py  tier2.py  tier3.py  tier4.py  tier5.py  tier6.py  tier7.py
tests/tier1/: primitives.yaml
tests/tier2/: structured.yaml
tests/tier3/: nested.yaml
tests/tier4/: polymorphic.yaml
tests/tier5/: distractors.yaml
tests/tier6/: strategy.yaml
tests/tier7/: sql.yaml
